changed gridlayout to flexbox, fixed minor alignment issues

--- a/game.css
+++ b/game.css
@@ -216,13 +216,6 @@ table {
 	font-weight: bold;
 }
 
-/*
-th {
-  height: var(--cell-outer);
-  width: var(--cell-outer);
-}
-*/
-
 .short-height {
 	height: 30px;
 }
@@ -238,20 +231,28 @@ td {
   border: var(--grid-gap) solid rgb(185,189,198);
 }
 
+.controls {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.arrow-control-grid {
+	display: flex;
+	flex-direction: row;
+}
 
 .button-grid-container-one {
-	display: grid;
-	grid-template-columns: auto;
-	grid-template-rows: auto;
-	margin: auto;
-	max-width: 120px;
+	display: flex;
 }
 .button-grid-container-three {
-	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-template-rows: auto;
-	grid-column-gap: 15px;
+	display: flex;
+	flex-direction: column;
+	margin-left: 10px;
+	margin-right: 10px;
 }
+
+
 .button-grid-item {
 	text-align: center;
 	margin-top: 10px;
@@ -269,10 +270,11 @@ input[type=text] {
 	width: 100%;
 	border-radius: 8px;
 	border: 2px solid rgb(185,189,198);
-	max-width: 120px;
 	text-align: center;
 	font-size: 24px;
 	font-weight: bold;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 @media (max-width: 1100px) and (min-width: 600px) {
@@ -321,16 +323,8 @@ input[type=text] {
 		width: 90vw;
 	}
 
-	.button-grid-container-three {
-		width: 90vw;
-		grid-column-gap: 2vw;
-	}
-	.button-grid-container-one {
-		width: 90vw;
-	}
-
 	.button-grid-item {
-		width: 28vw;
+		width: 25vw;
 	}
 
 }
